# assu

./: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml  streamlit_app.py
.config/: settings.json
.github/: BRANCH_STRATEGY.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-render.yml  ci.yml
auto_insurance/: __init__.py
auto_insurance/api/: __init__.py  dashboard.html  dependencies.py  logging_config.py  logging_utils.py  main.py  persistence.py
auto_insurance/api/endpoints/: health.py  predict.py
auto_insurance/api/schemas/: insurance.py
auto_insurance/models/: encoder.pkl  model_frequence.json  model_gravite.json
auto_insurance/src/: __init__.py  features.py  model.py  pipeline.py  preprocessing.py
tests/: __init__.py  test_api.py  test_features.py  test_preprocessing.py
